# cosyfir

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.txt  NOTICE.txt  Readme.md  build_all.sh  main.cpp
common/: version.h.in
cosyfird/: CMakeLists.txt  main.cpp
cosyfird/include/cosyfir-sub/: configparser.hpp
cosyfird/include/cosyfird/: configparser.hpp
cosyfird/include/network/: mqttclient.hpp
cosyfird/include/tui/: stream.hpp  tuiapp.hpp  window.hpp
cosyfird/source/cosyfir-sub/: configparser.cpp  main.cpp
cosyfird/source/cosyfird/: main.cpp
cosyfird/source/network/: mqttclient.cpp
cosyfird/source/tui/: stream.cpp  tuiapp.cpp  window.cpp
node/: CMakeLists.txt  Commissioning_template.h  Readme.md  main.c  main.cpp
node/actuator/: main.c
node/common/: Commissioning_template.h  LoRa.c  LoRa.h
node/sensor/: ds18b20.c  ds18b20.h  main.c
server/: CMakeLists.txt
server/include/cosyfird/: app.hpp  configparser.hpp
server/include/network/: mqttclient.hpp
server/include/tui/: app.hpp  message_stream.hpp  status_stream.hpp  stream.hpp  tuiapp.hpp  window.hpp
server/source/cosyfird/: app.cpp  configparser.cpp  main.cpp
server/source/network/: mqttclient.cpp
server/source/tui/: app.cpp  message_stream.cpp  status_stream.cpp  stream.cpp  tuiapp.cpp  window.cpp
yaaisd/: CMakeLists.txt
